DT-1921 Adds width 100% and float to stop the footer from jumping up in the editor

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -108,6 +108,8 @@
 
 .template-footer {
     margin-top: 100px;
+    width: 100%;
+    float: left;
 }
 
 
